+ stare verzie bias-variancce trade-off; ~ uprava 1. polovice 2. casti (konecne mnoziny hypotez)

--- a/cast1-technicke-detaily.tex
+++ b/cast1-technicke-detaily.tex
@@ -1,4 +1,4 @@
-\subsection{Technické detaily}
+\section{Appendix: technické detaily k bias-variance tradeoff}
 \label{tradeoff:tech}
 
 \def\dist{\text{dist}}
