--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \newtheorem{remark}{Poznámka}[chapter]
 \theoremstyle{definition}
 \newtheorem{definition}{Definícia}
+\newtheorem{assumption}{Predpoklad}
 \newtheorem{exercise}{}[chapter]
 
 \usepackage{xcolor} % \color
@@ -48,9 +49,6 @@
 % \newcommand{\vychylkaT}{{\epsilon^T_\text{approx.}}}
 \newcommand{\rozptyl}{{\epsilon_\text{est.}}}
 \newcommand{\rozptylT}{{\epsilon^T_\text{est.}}}
-
-\newcommand{\chalg}{\text{\normalfont očakávaná testovacia chyba}}
-\newcommand{\chalgt}{\text{\normalfont očakávaná trénovacia chyba}}
 
 \newcommand{\larr}{\leftarrow}
 \newcommand{\rarr}{\rightarrow}
